css/qual.css
.bi {
    font-weight: bold;
    font-style: italic;
}
.todo {
    font-weight: bold;
    color: red;
}
.todo::before {
    content: "TODO: ";
}
img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.ex-sent {
    margin-left:  15%;
    margin-right: 15%;
    border-radius: 0.25rem;
    padding: 0.5rem;
    border-color: rgba(0,0,0,.8);
    border-style: solid;
    border-width: 1px;
    margin-bottom: 42px;
}
.wizard-tab-content, .wizard-card-footer {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    font-size: 17px;
    line-height: 1.3;
}
.wizard-title {
    font-size: xx-large;
}
.explain::before {
    content: "Explanation: ";
}
.explain {
    font-style: italic;
}
.sent-desc {
    font-size: 14px;
    color: rgb(175, 175, 175);
    margin:0;
}
.sent p {
    font-size: 20px;
    margin-top: 6px;
}
.edit {
    background-color: rgb(248, 248, 248);
    padding: 16px;
    margin-bottom: 16px;
}
.edit label {
    font-size: 14px !important;
}
.edit p {
    font-size: 12px !important;
}
.edit .edit-type, .edit .edit-text, .edit .edit-label {
    font-size: 16px !important;
}
.column-severity {
    display: table-cell;
}
.bt-sent {
    margin-bottom: 6px
}
.bt-sent-cont {
    margin-bottom: 0px;
    height:235px;
}
.tc {
    text-align: -webkit-center;
}

